force-app/main/default/objects/Product_Name_Item__c/Product_Name_Item__c.object-meta.xml
<CustomObject>
    <label>Product Name Item</label>
    <nameField>
        <displayFormat>PNI-{000000}</displayFormat>
        <label>Product Name Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Name Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>