force-app/main/default/objects/Product_Name_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>Cash Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>