force-app/main/default/objects/Product_Name_Item__c/fields/Product_Combo_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Combo_Name__c</fullName>
    <label>Product Combo Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Name__c.Product_Combo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Product Name Item</relationshipLabel>
    <relationshipName>Product_Combo_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>