force-app/main/default/objects/Product_Name_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Name__c.Product_Combo__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Product Name Item (Product Name)</relationshipLabel>
    <relationshipName>Product_Name_Item</relationshipName>
    <type>Lookup</type>
</CustomField>