force-app/main/default/objects/Product_Name_Item__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>