force-app/main/default/objects/Product_Name_Item__c/fields/Weight_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Weight_Coefficient__c</fullName>
    <label>Weight Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>